Extracted Image Output Fixing

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div
               class="w-full min-h-72 border-2 border-dashed border-primary rounded-lg text-center"
             >
-              <span
+              <span class="block"
                 >Image output will be shown here. Click image to download</span
               >
               <!-- <canvas id="extractCanvas" style="display: none"></canvas> -->
